# rigetti-fake-backends

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
code/: fig10_noise_model.py  fig11_topology.py  fig1_architecture.py  fig2_layer_sweep.py  fig3_stability.py  fig4_walkforward.py  fig5_horizon.py  fig6_comparison.py  fig7_lorenz.py  fig8_features.py  fig9_phase_transition.py  generate_all_figures.py
data/: experimental_results.json  fakenovera_results_20251228_212143.json
fakecepheus/: __init__.py  specs.py
fakecepheus/pyquil/: __init__.py  backend.py
fakecepheus/qiskit/: __init__.py  backend.py  noise.py
fakenovera/: __init__.py  specs.py
fakenovera/pyquil/: __init__.py  backend.py
fakenovera/qiskit/: __init__.py  backend.py  noise.py
paper/: main.tex  references.bib
scripts/: plot_cepheus_topology.py  plot_scaling_comparison.py  prepare_submission.sh  vastai_launch.py  vastai_run.sh
tests/: test_fakecepheus.py  test_fakenovera.py
