[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rigetti-fake-backends"
version = "0.1.0"
description = "Open-source fake backends for Rigetti quantum processors (Novera 9Q, Cepheus-1 36Q)"
readme = "README.md"
authors = [{name = "Daniel Mo Houshmand", email = "mo@qdaria.com"}]
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Operating System :: OS Independent",
]
keywords = [
    "quantum computing",
    "noise model",
    "Rigetti",
    "Novera",
    "Cepheus",
    "fake backend",
    "quantum reservoir computing",
    "NISQ",
]
dependencies = [
    "numpy>=1.21",
    "networkx>=2.6",
]

[project.optional-dependencies]
qiskit = ["qiskit>=1.0", "qiskit-aer>=0.13"]
pyquil = ["pyquil>=4.0"]
all = ["qiskit>=1.0", "qiskit-aer>=0.13", "pyquil>=4.0"]
dev = ["pytest>=7.0", "pytest-cov", "ruff"]

[project.urls]
Homepage = "https://github.com/MoHoushmand/rigetti-fake-backends"
Documentation = "https://github.com/MoHoushmand/rigetti-fake-backends#readme"
Repository = "https://github.com/MoHoushmand/rigetti-fake-backends"
Issues = "https://github.com/MoHoushmand/rigetti-fake-backends/issues"

[tool.setuptools.packages.find]
include = ["fakenovera*", "fakecepheus*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py39"
line-length = 100
